c4prj2_input/grade.txt
Grading at Wed May 22 17:02:01 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:12:8: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
     fc -> deck[index].cards[fc -> decks[index].n_cards] = ptr;
        ^
Compilation of future.c failed

Overall Grade: F
